--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.7.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
